opam-version: "2.0"
version: "0.1"
synopsis: "Dependently-typed Data Plane Programming"
authors: "Matthias Eichholz"
maintainer: "Matthias Eichholz"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "alcotest"
  "ANSITerminal"
  "core" 
  "dune" {>= "3.4"}
  "menhir" {< "20211230"}
  "ocaml" {>= "4.14.0"}
  "petr4" {>= "0.1.2"}
  "ppx_jane"
  "fmt"
  #"landmarks"
  #"landmarks-ppx"
  "logs"
  "owl-base"
  "bitv"
]
